--- a/css/style.css
+++ b/css/style.css
@@ -5,49 +5,169 @@
     font-family: 'Yantramanav', sans-serif;
 }
 
-.container-header{
-    max-height: 100px;
-}
-
-
-.barra-menu{
-    background-color: #255ee9;
+.container{
+    max-width: 1100px;
+	margin: 0 auto;
     display: flex;
+    justify-content: space-between
     align-items: center;
-    justify-content: space-between;
-    margin: 0px auto;
-    padding: 10px 200px;
+    padding: 8px 0;
+}    
+
+.bgr-header{
+    background-color: #255ee9;
+
 }
 
-.logo{
-    width: 100px;
-    text-align: left;
+#logo{
+    width: 20%;
 }
 
-.link{
-    width: 80%;
-    text-align: center;
+#menu{
+    width: 60%;
+    padding: 16px;
+}
+
+#login{
+    text-align: right;
+    width: 20%;
+    padding: 16px;
+}
+
+ul{
+    display: flex;
+    justify-content: center;
+}
+
+li{
+    padding: 0 16px;
+    list-style-type: none;
+}
+
+a {
+	text-decoration: none;
     color: white;
 }
 
-.link > ul{
-    list-style-type: none;
+.button{
+    background-color: white;
+    color: black;
+    border-radius: 20px;
+    padding: 8px 16px;
+    font-size: 14px;
+}
+
+#jumbo{
     display: flex;
-    justify-content: space-evenly;
-    text-align: center;
+    min-height: 480px;
+    padding: 64px 0;
+    background-image: url(../img/jumbo.png);
+	background-size: cover;
+	background-position: center;
+	text-align: center;
+	color: white;
+
 }
 
-.login{
-    text-align: right;
+.jumbo-content{
+    max-width: 1100px;
+	margin: 0 auto;
+    width: 50%;
 }
 
-.login > button{
-    border-radius: 50px;
-    border: none;
-    font-size: 15px;
-    padding: 5px 10px 5px 10px;
+h1{
+    font-weight: bold;
+    margin-bottom: 60px;
+    font-size: 50px;
+}
+
+p{
+    margin-bottom: 60px;
+}
+
+.button-centrali{
+    background-color: white;
+    color: black;
+    border-radius: 20px;
+    padding: 8px 16px;
+    font-size: 20px;
+    margin: 0 8px;
 }
 
 
-.box-blue > img{
+
+/* ----- MAIN  ------ */
+
+.main-container{
+    display: flex;
+	max-width: 1100px;
+	margin: 0 auto;
+	min-height: 300px;
+	padding: 64px 0;
+}
+
+.colonna-grande{
+    width: 67%;
+}
+.colonna-piccola{
+    width: 33%;
+}
+
+main h2 {
+	font-size: 48px;
+	margin: 30px 0;
+}
+main p {
+	font-size: 18px;
+	line-height: 150%;
+}
+
+.colonna-grande > img{
     width: 100%;
+    padding: 0 32px;
+
+}
+
+.bgr-grigio{
+    background-color: #f6f6f6;
+}
+
+minHeight container d-flex py-64
+
+.colonna-verde{
+    min-height: 300px;
+    max-width: 1100px;
+	margin: 0 auto;
+    display: flex;
+    padding: 64px 0;
+}
+
+.colonna-finale{
+    width: 100%;
+    text-align: center;
+    min-height: 1100px;
+}
+
+.testo-finale > h2{
+    padding-top: 50px;
+}
+
+.stelline-sup {
+	margin: 50px 0;
+	font-size: 40px;
+	background-image: url(../img/stars.svg);
+	background-repeat: no-repeat;
+	background-size: contain;
+	background-position: center;
+	padding-top: 50px;
+}
+
+.bottone-finale{
+    background-color: #a7b6e6;
+    color: black;
+    border-radius: 20px;
+    padding: 8px 16px;
+    font-size: 20px;
+    margin: 0 8px;
+
+}
